force-app/main/default/objects/Technician__c/fields/Available_For_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Assignment__c</fullName>
    <label>Available For Assignment</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>