force-app/main/default/objects/Technician__c/fields/Device_ID__c.field-meta.xml
<CustomField>
    <fullName>Device_ID__c</fullName>
    <label>Device ID</label>
    <type>Text</type>
    <length>100</length><externalId>true</externalId>
</CustomField>