force-app/main/default/objects/Technician__c/fields/First_Time_Fix_Rate__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Fix_Rate__c</fullName>
    <label>First-Time Fix Rate</label>
    <type>Percent</type>
    <precision>5</precision><scale>1</scale>
</CustomField>