force-app/main/default/objects/Technician__c/fields/Jobs_Completed_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Completed_This_Month__c</fullName>
    <label>Jobs Completed This Month</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><defaultValue>0</defaultValue>
</CustomField>