force-app/main/default/objects/Technician__c/fields/Jobs_Completed_Total__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Completed_Total__c</fullName>
    <label>Jobs Completed Total</label>
    <type>Number</type>
    <precision>6</precision><scale>0</scale><defaultValue>0</defaultValue>
</CustomField>