force-app/main/default/objects/Technician__c/fields/Location_Updated__c.field-meta.xml
<CustomField>
    <fullName>Location_Updated__c</fullName>
    <label>Location Updated</label>
    <type>DateTime</type>
</CustomField>