force-app/main/default/objects/Technician__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>LongTextArea</type>
    <length>4096</length><visibleLines>3</visibleLines>
</CustomField>