force-app/main/default/objects/Technician__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Skills__c</columns>
    <columns>First_Time_Fix_Rate__c</columns>
    <columns>Jobs_Completed_Total__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Available_For_Assignment__c</columns>
    <columns>Preferred_Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Technicians</label>
</ListView>